added date ranges
